[package]
name = "image-convert"
version = "0.10.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/image-convert"
homepage = "https://magiclen.org/image-convert"
keywords = ["image", "interlacing", "resize", "imagemagick", "conversion"]
categories = ["multimedia::images", "multimedia::encoding"]
description = "A high level library for image identification, conversion, interlacing and high quality resizing."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/image-convert"
branch = "master"

[dependencies]
regex = "1"
once_cell = "1"
str-utils = "0.1"
enum-ordinalize = "3.1"
ico = "0.1"
magick_rust_014_dep = { package = "magick_rust", version = "0.14", optional = true }
magick_rust_013_dep = { package = "magick_rust", version = "0.13", optional = true }

[features]
default = ["none-background", "magick_rust"]
none-background = []

magick_rust = ["magick_rust_013"]
magick_rust_014 = ["magick_rust_014_dep"]
magick_rust_013 = ["magick_rust_013_dep"]