[package]
name = "image-convert"
version = "0.11.2"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/image-convert"
homepage = "https://magiclen.org/image-convert"
keywords = ["image", "interlacing", "resize", "imagemagick", "conversion"]
categories = ["multimedia::images", "multimedia::encoding"]
description = "A high level library for image identification, conversion, interlacing and high quality resizing."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
regex = "1"
once_cell = "1"
str-utils = "0.1"
enum-ordinalize = "3.1"
ico = "0.1"
magick_rust = "0.15"

[features]
default = ["none-background"]
none-background = []
